fixed z-index

--- a/src/components/sass/projects.scss
+++ b/src/components/sass/projects.scss
@@ -61,6 +61,7 @@ li.project-inner {
     position: relative;
     margin-top: 10px;
     margin-left: -10px;
+    z-index: 2;
     & a {
       display: flex;
       -webkit-box-pack: center;
